# niri-gesture-inspector

./: Cargo.toml  README.md  install_niri_gesture_inspector.sh
src/: ipc_thread.rs  main.rs  ui.rs
